<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_margin="35dp"
            />
        <TextView
            android:id="@+id/dice_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:text="@string/placeholder"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/num_dice"
                />
            <TextView
                android:id="@+id/num_dice"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/num_dice"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="35dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="wrap_content"

                android:text="@string/max_val"
                />
            <TextView
                android:id="@+id/max_value"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/max_val"
                />
        </LinearLayout>
        <Button
            android:id="@+id/see_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/see_results"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:onClick="seeResultsClicked"
            />
        <Button
            android:id="@+id/see_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/see_graph"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:onClick="seeGraphClicked"
            />
        <Button
            android:id="@+id/reroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/reroll"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:onClick="reroll"
            />
        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/home"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:onClick="homeClicked"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>