<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AverageFragment"
    android:background="@color/colorPrimaryDark">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/avgFragHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avgRoll"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/avgRoll"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/placeholder"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avgFragHeader"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgRoll"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AvgToLowBtn"
        android:text="@string/lowest"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AvgToHighBtn"
        android:layout_marginLeft="20dp"
        android:background="@color/colorAccent"
        android:text="@string/highest"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>