<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LowestFragment"
    android:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/lowFragHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lowRoll"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_margin="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lowRoll"
            android:layout_width="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lowFragHeader"
            />
        <LinearLayout
            android:id="@+id/btn_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lowRoll"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LowToAvgBtn"
                android:text="@string/average"
                android:background="@color/colorAccent"
                android:layout_marginRight="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LowToHighBtn"
                android:layout_marginLeft="20dp"
                android:background="@color/colorAccent"
                android:text="@string/highest"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>